feature chat - adding online flags on chats